--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* reset */
 * {
   margin: 0;
-  padding: 2em;
+  padding: 2px;
   border: 0;
   line-height: 1.5;
 }
@@ -14,6 +14,7 @@ body {
 main {
   padding-top: 5em;
   padding-bottom: 5em;
+  background-color: #DDE5B6;
   width: min(800px, 95vw);
   margin: 0 auto;
 }
@@ -89,6 +90,10 @@ li span:nth-child(3) {
   white-space: nowrap;
 }
 
+section[type="old chat"] {
+  background-color: #6C584C;
+}
+
 form {
   display: flex;
   justify-content: center;
@@ -113,7 +118,7 @@ textarea {
 input[type="submit"],
 button {
   margin-left: 4px;
-  background: #DDE5B6;
+  background: #41710D;
   color: #F0EAD2;
   padding: 6px 12px 6px 12px;
   border-radius: 8px;
