--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  font-family: 'Biko', 'Roboto',
+  font-family: 'Biko', 'Open Sans',
     sans-serif;
 }
 
@@ -138,20 +138,20 @@ textarea {
 input[type="submit"],
 button {
   margin-left: 4px;
-  background: #90BA64;
+  background: #379634;
   color: #F0EAD2;
   padding: 6px 12px 6px 12px;
   border-radius: 8px;
   font-size: 16px;
-  background-color: #90BA64;
+  background-color: #379634;
 }
 
 input[type="submit"]:hover,
 button:hover {
-  background-color: #41710D;
+  background-color: #4ecca3;
 }
 
 input[type="submit"]:disabled,
 button:disabled {
-  background-color: #ADC178;
+  background-color: #F0EAD2;
 }
